Added an image and a header for snapcamp

--- a/index.html
+++ b/index.html
@@ -144,6 +144,22 @@
       </div>
     </section>
 
+    <section class="perfectSkillSection hidden-sm hidden-xs hidden-md">
+      <div class="containerImage"></div>
+      <div class="containerSkillsSets">
+               <section class="defaultHeadingHeader hidden-sm hidden-xs hidden-md">
+          <br>
+            <h4>Our Media and our Morals</h4>
+            <div class="borderTop"></div>
+            <div class="borderBottom"></div>
+            <h2>Snapcamp</h2>
+            </section>
+        <p>Curabitur urna nulla, blandit in sem vel, dictum auctor augue. Morbi lobortis <br/> nunc nec libero interdum interdum.</p>
+
+        
+      </div>
+    </section>
+
     <!-- Skill set section -->
 
     <section class="skillsets hidden-md hidden-sm hidden-xs">
@@ -178,44 +194,7 @@
       <h2>MORE ABOUT OUR CLU</h2>
     </section>
 
-    <section class="perfectSkillSection hidden-sm hidden-xs hidden-md">
-      <div class="containerImage"></div>
-      <div class="containerSkillsSets">
-        <h2>OUR PERFECT SKILLS SET</h2>
-        <p>Curabitur urna nulla, blandit in sem vel, dictum auctor augue. Morbi lobortis <br/> nunc nec libero interdum interdum.</p>
 
-        <h3>ADOBE MUSE</h3>
-        <div class="progress">
-          <div id="progressBarAdobeMuse" class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
-            <span class="sr-only">95% Complete</span>
-          </div>
-        </div>
-        <h3 class="skillsHeading">HTML</h3>
-        <div class="progress">
-          <div id="progressBarHTML" class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
-            <span class="sr-only">95% Complete</span>
-          </div>
-        </div>
-        <h3 class="skillsHeading">CSS</h3>
-        <div class="progress">
-          <div id="progressBarCSS" class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
-            <span class="sr-only">95% Complete</span>
-          </div>
-        </div>
-        <h3 class="skillsHeading">JAVASCRIPT</h3>
-        <div class="progress">
-          <div id="progressBarJavascript" class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
-            <span class="sr-only">95% Complete</span>
-          </div>
-        </div>
-        <h3 class="skillsHeading">JQUERY</h3>
-        <div class="progress">
-          <div id="progressBarJQUERY" class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
-            <span class="sr-only">95% Complete</span>
-          </div>
-        </div>
-      </div>
-    </section>
 
     <!-- team section -->
 
