Adjusted the CSS to make the snapcamp image look better

--- a/index.html
+++ b/index.html
@@ -149,12 +149,14 @@
       <div class="containerSkillsSets">
                <section class="defaultHeadingHeader hidden-sm hidden-xs hidden-md">
           <br>
-            <h4>Our Media and our Morals</h4>
+            <h2>SnapCamp</h2>
             <div class="borderTop"></div>
             <div class="borderBottom"></div>
-            <h2>Snapcamp</h2>
+            <!-- <h2>Snapcamp</h2> -->
+            <p/>
+            <p>Curabitur urna nulla, blandit in sem vel, dictum auctor augue. Morbi lobortis <br/> nunc nec libero interdum interdum.</p>
             </section>
-        <p>Curabitur urna nulla, blandit in sem vel, dictum auctor augue. Morbi lobortis <br/> nunc nec libero interdum interdum.</p>
+        
 
         
       </div>
