--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#"><span class="DefaultThemeColor">H</span>ydrocarbon</a>
+            <a class="navbar-brand" href="#"><span class="DefaultThemeColor">C</span><sub>4</sub>H<sub>8</sub></a>
           </div>
 
           <!-- Collect the nav links, forms, and other content for toggling -->
@@ -79,7 +79,7 @@
       <!-- about us section -->
 
       <section class="about" id="about">
-          <section class="defaultHeadingHeader hidden-sm hidden-xs hidden-md">
+          <section class="defaultHeadingHeader ">
           <br>
             <h4>Exploring fire and movement</h4>
             <div class="borderTop"></div>
@@ -92,9 +92,9 @@
                 </div>
               </div>
             </div>
-        </section>
-        <div class="container">
-          <div class="col-lg-12 itemMockUpScreen">
+        <!--</section>-->
+        <!--<div class="container">-->
+          <!--<div class="col-lg-12 itemMockUpScreen">-->
 
             <div id="icoCarousel" class="carousel slide" data-ride="carousel">
               <!-- Indicators -->
@@ -139,64 +139,11 @@
                 <span class="sr-only">Next</span>
               </a>
             </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="perfectSkillSection hidden-sm hidden-xs hidden-md">
-      <div class="containerImage"></div>
-      <div class="containerSkillsSets">
-               <section class="defaultHeadingHeader hidden-sm hidden-xs hidden-md">
-          <br>
-            <h2>SnapCamp</h2>
-            <div class="borderTop"></div>
-            <div class="borderBottom"></div>
-            <!-- <h2>Snapcamp</h2> -->
-            <p/>
-            <p>Curabitur urna nulla, blandit in sem vel, dictum auctor augue. Morbi lobortis <br/> nunc nec libero interdum interdum.</p>
-            </section>
-        
-
-        
-      </div>
-    </section>
-
-    <!-- Skill set section -->
-
-    <section class="skillsets hidden-md hidden-sm hidden-xs">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-3 itemSkillSets">
-            <h3 id="animateNumber1">970</h3>
-            <h4>COMPLETED PROJECTS</h4>
-          </div>
-          <div class="col-lg-3 itemSkillSets">
-            <h3 id="animateNumber2">720</h3>
-            <h4>SATISFIED CLIENTS</h4>
-          </div>
-          <div class="col-lg-3 itemSkillSets">
-            <h3 id="animateNumber3">450</h3>
-            <h4>TOP WEB APPLICATION</h4>
-          </div>
-          <div class="col-lg-3 itemSkillSets">
-            <h3 id="animateNumber4">24</h3>
-            <h4>MASTERED DEVELOPERS</h4>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- perfect skill section -->
-
-    <section class="defaultHeadingHeader hidden-sm hidden-xs hidden-md">
-      <h4>Clean & Elegant Design</h4>
-      <div class="borderTop"></div>
-      <div class="borderBottom"></div>
-      <h2>MORE ABOUT OUR CLU</h2>
-    </section>
-
-
+          <!--</div>-->
+        <!--</div>-->
+      <!--</div>-->
+        </section>
+      </section>
 
     <!-- team section -->
 
