Added snapcamp back in

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <div class="container">
               <div class="row">
                 <div class="col-lg-6 col-lg-offset-3">
-            In prototype since 2014, The Ninth Ascension is a combination of fire art, metal sculpture, and interactive electromechanical movements.  Each single eight-foot unit gives the impression of a flame mysteriously traveling from end to end; but, much more than that, multiple units can be combined into polygons to create dancing, chasing flames in an infiinte number of programmable patterns, responsive to time, sound, proxmity, and mood.  In its first incarnation, The Ninth Ascenion will be transported to Burning Man and assembled on the Playa into a 15-foot high diamond, with nine indepenedntly controlled edges.
+            In development since 2014, The Ninth Ascension is a combination of fire art, metal sculpture, and interactive electromechanical movements.  Each single eight-foot unit gives the impression of a flame mysteriously traveling from end to end; but, much more than that, multiple units can be combined into polygons to create dancing, chasing flames in an infiinte number of programmable patterns, responsive to time, sound, proxmity, and mood.  In its first incarnation, The Ninth Ascenion will be transported to Burning Man and assembled on the Playa into a 15-foot high diamond, with nine indepenedntly controlled edges.
                 </div>
               </div>
             </div>
@@ -142,6 +142,26 @@
           <!--</div>-->
         <!--</div>-->
       <!--</div>-->
+        </section>
+      </section>
+
+      <section class="about" id="snapcamp">
+        <section class="defaultHeadingHeader ">
+          <h4>A discussion on media and social justice</h4>
+          <div class="borderTop"></div>
+          <div class="borderBottom"></div>
+          <h2>SnapCamp</h2>
+          <div class="container">
+            <div class="row">
+              <div class="col-12-lg">
+                <img src="assets/snapcamp_screenshot.jpg" />
+              </div>
+              <div class="col-lg-6 col-lg-offset-3">
+                Lorem ipsem dolor sit
+              </div>
+            </div>
+          </div>
+
         </section>
       </section>
 
