started adding team

--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
             <a href="#homeMain" class="scroll">WELCOME</a>
           </li>
           <li>
-            <a href="#about" class="scroll">ABOUT</a>
+            <a href="#ninthAscension" class="scroll">THE NINTH ASCENSION</a>
           </li>
           <li>
-            <a href="#services" class="scroll">SERVICES</a>
+            <a href="#snapcamp" class="scroll">SNAPCAMP</a>
           </li>
           <li>
-            <a href="#portfolio" class="scroll">PORTFOLIO</a>
+            <a href="#team" class="scroll">WHO WE ARE</a>
           </li>
           <li>
-            <a href="#contactUS" class="scroll">CONTACT</a>
+            <a href="mailto:weirdos@hydrocarboncollective.com" class="scroll">CONTACT</a>
           </li>
         </ul>
       </nav>
@@ -78,7 +78,7 @@
 
       <!-- about us section -->
 
-      <section class="about" id="about">
+      <section class="about" id="ninthAscension">
           <section class="defaultHeadingHeader ">
           <br>
             <h4>Exploring fire and movement</h4>
@@ -183,17 +183,17 @@
 
     <section class="team" id="team">
       <header class="defaultHeadingHeader">
-        <h4>MEET SOME AWESOME PEOPLE</h4>
+        <h4>MEET SOME WEIRDOS</h4>
         <div class="borderTop"></div>
         <div class="borderBottom"></div>
-        <h2>MEET OUR TEAM</h2>
+        <h2>THE COLLECTIVE</h2>
       </header>
       <div class="container">
         <div class="row">
           <div class="col-lg-3 iteamTeamMain">
             <div class="itemTeam"></div>
-            <h3>ROBORT SAIN</h3>
-            <h4>FOUNDER - CEO</h4>
+            <h3>MATT</h3>
+            <h4>FOUNDER</h4>
             <ul class="teamSocails">
               <li>
                 <a href="#">
@@ -219,8 +219,8 @@
           </div>
           <div class="col-lg-3 iteamTeamMain">
             <div class="itemTeam2"></div>
-            <h3>ROBORT SAIN</h3>
-            <h4>FOUNDER - CEO</h4>
+            <h3>ROCKETKAR</h3>
+            <h4>SHORT ORDER COOK</h4>
             <ul class="teamSocails">
               <li>
                 <a href="#">
@@ -304,7 +304,7 @@
     <div class="clearfix"></div>
 
   <footer>
-    <h2>Hydrocarbon Collective</h2>
+    <h2>C<sub>4</sub>H<sub>8</sub></h2>
     <p class="hidden-sm hidden-xs">Making Your Life More C<sub>4</sub>H<sub>8</sub> since 2014</p>
     <ul>
       <li>
