--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <a href="#team" class="scroll">WHO WE ARE</a>
           </li>
           <li>
-            <a href="mailto:weirdos@hydrocarboncollective.com" class="scroll">CONTACT</a>
+            <a onclick="window.location.href = 'mailto:info@hydrocarboncollective.com';" class="scroll">CONTACT</a>
           </li>
         </ul>
       </nav>
@@ -153,7 +153,7 @@
           <h2>SnapCamp</h2>
           <div class="container">
             <div class="row">
-              <div class="col-lg-6 col-lg-offset-3">
+              <div class="col-lg-6 col-lg-offset-3 col-xs-8 col-xs-offset-2">
                 <p>In 2016, the homelessness problem in San Francisco became increasingly visible, with tent camps popping up around the city.
                   We created <a href="http://www.getsnapcamp.com">Snapcamp</a>, a fake app, website, and social media account, to draw attention to the misguided "hackathon" culture of relying on software to solve society's problems.  Snapcamp also lampooned the clickbait media itself, by becoming an overnight but disposable hot button issue.
                 <h3>Articles about SnapCamp</h3>
@@ -166,9 +166,9 @@
                 </p>
             </div>
             <div class="row">
-              <div class="col-12-lg">
+              <div class="col-10-lg col-lg-offset-1 col-xs-8 col-xs-offset-2">
                 <a href="http://www.getsnapcamp.com">
-                  <img src="assets/snapcamp_screenshot.jpg" />
+                  <img src="assets/snapcamp_screenshot.jpg" style="max-width: 100%"/>
                 </a>
               </div>
 
@@ -246,8 +246,7 @@
           </div>
           <div class="col-lg-3 iteamTeamMain">
             <div class="itemTeam3"></div>
-            <h3>ROBORT SAIN</h3>
-            <h4>FOUNDER - CEO</h4>
+            <h3><span style="font-family: 'Times New Roman';">&alpha;</span> DEB LYON</h3>
             <ul class="teamSocails">
               <li>
                 <a href="#">
@@ -271,36 +270,6 @@
               </li>
             </ul>
           </div>
-          <div class="col-lg-3 iteamTeamMain">
-            <div class="itemTeam4"></div>
-            <h3>ROBORT SAIN</h3>
-            <h4>FOUNDER - CEO</h4>
-            <ul class="teamSocails">
-              <li>
-                <a href="#">
-                  <i class="fa fa-facebook"></i>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <i class="fa fa-twitter"></i>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <i class="fa fa-google-plus"></i>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <i class="fa fa-pinterest"></i>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </section>
     <div class="clearfix"></div>
 
   <footer>
