--- a/index.html
+++ b/index.html
@@ -196,23 +196,8 @@
             <h4>FOUNDER</h4>
             <ul class="teamSocails">
               <li>
-                <a href="#">
-                  <i class="fa fa-facebook"></i>
-                </a>
-              </li>
-              <li>
-                <a href="#">
+                <a href="http://www.twitter.com/drmattyg">
                   <i class="fa fa-twitter"></i>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <i class="fa fa-google-plus"></i>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <i class="fa fa-pinterest"></i>
                 </a>
               </li>
             </ul>
@@ -220,26 +205,15 @@
           <div class="col-lg-3 iteamTeamMain">
             <div class="itemTeam2"></div>
             <h3>ROCKETKAR</h3>
-            <h4>SHORT ORDER COOK</h4>
             <ul class="teamSocails">
               <li>
-                <a href="#">
-                  <i class="fa fa-facebook"></i>
+                <a href="http://www.spinetree.org">
+                  <i class="fa fa-external-link"></i>
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="http://www.twitter.com/spinetree">
                   <i class="fa fa-twitter"></i>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <i class="fa fa-google-plus"></i>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <i class="fa fa-pinterest"></i>
                 </a>
               </li>
             </ul>
@@ -247,28 +221,6 @@
           <div class="col-lg-3 iteamTeamMain">
             <div class="itemTeam3"></div>
             <h3><span style="font-family: 'Times New Roman';">&alpha;</span> DEB LYON</h3>
-            <ul class="teamSocails">
-              <li>
-                <a href="#">
-                  <i class="fa fa-facebook"></i>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <i class="fa fa-twitter"></i>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <i class="fa fa-google-plus"></i>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <i class="fa fa-pinterest"></i>
-                </a>
-              </li>
-            </ul>
           </div>
     <div class="clearfix"></div>
 
